src/objects/Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Available_From_Date__c</fullName>
        <description>Should be the contract end date as default when this is populated</description>
        <label>Available From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Config_Version__c</fullName>
        <label>Config Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Inventories</relationshipLabel>
        <relationshipName>Inventories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_per_space_Annual__c</fullName>
        <formula>Cost_per_space__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost per space per annum</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_per_space__c</fullName>
        <label>Cost per space per month</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Suites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estate_Charge_Total__c</fullName>
        <formula>Estate_Charge_per_sq_ft__c *  Size_sq_ft__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estate Charge Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estate_Charge_per_sq_ft_Annual__c</fullName>
        <formula>Estate_Charge_per_sq_ft__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estate Charge per sq ft per annum</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estate_Charge_per_sq_ft__c</fullName>
        <label>Estate Charge per sq ft per month</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Number__c</fullName>
        <label>Floor Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Structure__c</fullName>
        <formula>Property__r.Funding_Structure__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Structure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ground_Rent_Charge_Total__c</fullName>
        <formula>Ground_Rent_Charge_per__c *  Size_sq_ft__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ground Rent Charge Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ground_Rent_Charge_per__c</fullName>
        <label>Ground Rent Charge per sq ft</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incumbent_End_Date__c</fullName>
        <description>Should be populated from the related active Contract automatically</description>
        <label>Incumbent End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incumbent_Start_Date__c</fullName>
        <description>Should be populated from the related active Contract automatically</description>
        <label>Incumbent Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Charge_Total__c</fullName>
        <formula>Insurance_Charge_per_sq_ft__c *  Size_sq_ft__c  * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insurance Charge Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Charge_per_sq_ft_Annual__c</fullName>
        <formula>Insurance_Charge_per_sq_ft__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insurance per sq ft per annum</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Charge_per_sq_ft__c</fullName>
        <label>Insurance per sq ft per month</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Old_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Old_Version__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Rent_Modified_Date__c</fullName>
        <description>Enables reporting and scheduling to asset management.
            This is updated with a Workflow</description>
        <inlineHelpText>The date when the rent per sqft field was last modified</inlineHelpText>
        <label>Last Rent Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Load_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Load Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Managed_Office_Sticker_Price__c</fullName>
        <formula>(Rent_Total__c+

Service_Charge_Total__c+

Insurance_Charge_Total__c+

IF(ISBLANK(Rent_Total__c),0,Rent_Total__c*0.45)+

IF(ISBLANK(Size_sq_ft__c),0,

2*(Size_sq_ft__c*1.5/12)+

(42/36)*Size_sq_ft__c+

IF(Size_sq_ft__c &gt;= 1500,450,150)+

IF(Size_sq_ft__c &gt;= 2500, 300, 150) +

IF(Size_sq_ft__c &lt; 1345, 0,
IF(AND(1345 &lt;= Size_sq_ft__c, Size_sq_ft__c &lt; 3229), 136,
IF(AND(3229 &lt;= Size_sq_ft__c, Size_sq_ft__c &lt; 6996), 338,
IF(Size_sq_ft__c &gt;= 6996, 753, 0
))))

))*1.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Managed Office Sticker Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Inventories</relationshipLabel>
        <relationshipName>Inventories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Inventories</relationshipLabel>
        <relationshipName>Inventories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Property_Address__c</fullName>
        <description>Parent Property Address</description>
        <formula>Property__r.Address__c</formula>
        <inlineHelpText>Parent Property Address</inlineHelpText>
        <label>Parent Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Property_Post_Code__c</fullName>
        <description>Parent Property Post Code</description>
        <formula>Property__r.Post_Code__c</formula>
        <inlineHelpText>Parent Property Post Code</inlineHelpText>
        <label>Parent Property Post Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_emption_Agreement_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-emption Agreement Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventories (Pre-emption Agreement Customer)</relationshipLabel>
        <relationshipName>Pre_emption_Suites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_emption_Agreement_End__c</fullName>
        <label>Pre-emption Agreement End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_emption_Agreement_Start__c</fullName>
        <label>Pre-emption Agreement Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_emption_Agreement_Status__c</fullName>
        <label>Pre-emption Agreement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pre_emption_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_emption_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-emption Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6) OR 7</booleanFilter>
            <errorMessage>Please select the Product that meets the Inventory Record Type</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Actual Suite, Proposed Suite</value>
            </filterItems>
            <filterItems>
                <field>Product2.ProductCode</field>
                <operation>equals</operation>
                <value>OfficeRent, LabSpace, RetailRent, Storage, BSLF, BSDL</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Desk</value>
            </filterItems>
            <filterItems>
                <field>Product2.ProductCode</field>
                <operation>equals</operation>
                <value>BSCW</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Car Parking</value>
            </filterItems>
            <filterItems>
                <field>Product2.ProductCode</field>
                <operation>equals</operation>
                <value>CarSpace</value>
            </filterItems>
            <filterItems>
                <field>Product2.ProductCode</field>
                <operation>equals</operation>
                <value>BSHD, PreEmptionAgreement</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inventories</relationshipLabel>
        <relationshipName>Suites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Text__c</fullName>
        <description>System field that is used for Lookup Filters, do not delete!</description>
        <label>Property Text</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>Suites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Property_for_Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property for Filter</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Inventories (Property Lookup)</relationshipLabel>
        <relationshipName>Inventories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quanta__c</fullName>
        <label>Quanta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>SerLic</fullName>
                </value>
                <value>
                    <fullName>DedLic</fullName>
                </value>
                <value>
                    <fullName>DeskLic</fullName>
                </value>
                <value>
                    <fullName>CPL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Record_Type__c</fullName>
        <formula>IF(CONTAINS(TEXT(Space_Type__c), &quot;Conventional&quot;), &quot;Conventional&quot;,
IF(CONTAINS(TEXT(Space_Type__c), &quot;Serviced&quot;), &quot;Serviced&quot;, &quot;&quot;))</formula>
        <label>Quote Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeDeveloperName__c</fullName>
        <label>RecordTypeDeveloperName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Used for list views, should be kept off report types and page layouts to where the property region is used to avoid confusion</description>
        <formula>Text(Property__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remove_from_Availability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to remove a record from particular reports and workflows</description>
        <inlineHelpText>If set to true, this record will not appear on the Availability reports and schedules.</inlineHelpText>
        <label>Remove from Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rent_Total__c</fullName>
        <formula>Rent_per_sq_ft__c *  Size_sq_ft__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rent Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rent_per_sq_ft_Annual__c</fullName>
        <formula>Rent_per_sq_ft__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rent per sq ft per annum</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rent_per_sq_ft__c</fullName>
        <label>Rent per sq ft per month</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rent_per_workstation_Annual__c</fullName>
        <formula>Rent_per_workstation__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rent per workstation per annum</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rent_per_workstation__c</fullName>
        <label>Rent per workstation per month</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Status__c</fullName>
        <label>Sales Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Terms Out</fullName>
                </value>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>Not for Sale</fullName>
                </value>
                <value>
                    <fullName>Instructed</fullName>
                    <isActive>false</isActive>
                    <label>Instructed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Charge_Total__c</fullName>
        <formula>Service_Charge_per_sq_ft__c *  Size_sq_ft__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Charge Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Charge_per_sq_ft_Annual__c</fullName>
        <formula>Service_Charge_per_sq_ft__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Charge per sq ft per annum</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Charge_per_sq_ft__c</fullName>
        <label>Service Charge per sq ft per month</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Size_sq_ft__c</fullName>
        <label>Size sq ft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Space_Type__c</fullName>
        <label>Space Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Car Space - Conventional</fullName>
                </value>
                <value>
                    <fullName>Car Space - Serviced</fullName>
                </value>
                <value>
                    <fullName>Bike Space</fullName>
                </value>
                <value>
                    <fullName>Disabled Space</fullName>
                </value>
                <value>
                    <fullName>Loading Bay</fullName>
                </value>
                <value>
                    <fullName>Visitor Space</fullName>
                </value>
                <value>
                    <fullName>Short Term</fullName>
                </value>
                <value>
                    <fullName>Tandem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sublet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sublet</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventories (Sublet)</relationshipLabel>
        <relationshipName>Inventories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subsales_Status__c</fullName>
        <label>Subsales Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Licensed</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suite_Status__c</fullName>
        <label>Suite Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workstations__c</fullName>
        <label>Workstations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Inventory</label>
    <listViews>
        <fullName>Alderley_Car_Parking</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Product__c</columns>
        <columns>Space_Type__c</columns>
        <columns>Sales_Status__c</columns>
        <columns>Customer__c</columns>
        <columns>Cost_per_space__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Alderley Park</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Inventory__c.Car_Parking</value>
        </filters>
        <filters>
            <field>Remove_from_Availability__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Alderley Car Parking</label>
    </listViews>
    <listViews>
        <fullName>Alderley_Co_working_Hot_Desks</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Product__c</columns>
        <columns>Sales_Status__c</columns>
        <columns>Customer__c</columns>
        <columns>Rent_per_workstation__c</columns>
        <columns>Workstations__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Alderley Park</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Inventory__c.Desk</value>
        </filters>
        <filters>
            <field>Remove_from_Availability__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Alderley Co-working Hot Desks</label>
    </listViews>
    <listViews>
        <fullName>Alderley_Office_Suites_Actual</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Product__c</columns>
        <columns>Sales_Status__c</columns>
        <columns>Customer__c</columns>
        <columns>Rent_per_sq_ft__c</columns>
        <columns>Service_Charge_per_sq_ft__c</columns>
        <columns>Insurance_Charge_per_sq_ft__c</columns>
        <columns>Estate_Charge_per_sq_ft__c</columns>
        <columns>Ground_Rent_Charge_per__c</columns>
        <columns>Size_sq_ft__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Leeds</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Inventory__c.Actual_Suite</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Office,Storage,Retail</value>
        </filters>
        <filters>
            <field>Remove_from_Availability__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Alderley Office Suites (Actual)</label>
    </listViews>
    <listViews>
        <fullName>Alderley_Office_Suites_Proposed</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Product__c</columns>
        <columns>Sales_Status__c</columns>
        <columns>Customer__c</columns>
        <columns>Rent_per_sq_ft__c</columns>
        <columns>Service_Charge_per_sq_ft__c</columns>
        <columns>Insurance_Charge_per_sq_ft__c</columns>
        <columns>Estate_Charge_per_sq_ft__c</columns>
        <columns>Ground_Rent_Charge_per__c</columns>
        <columns>Size_sq_ft__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Alderley Park</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Inventory__c.Actual_Suite</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Office,Storage,Retail</value>
        </filters>
        <filters>
            <field>Remove_from_Availability__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Alderley Office Suites (Proposed)</label>
    </listViews>
    <listViews>
        <fullName>Alderley_Serviced_Suites_Actual</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Product__c</columns>
        <columns>Sales_Status__c</columns>
        <columns>Customer__c</columns>
        <columns>Rent_per_workstation__c</columns>
        <columns>Workstations__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Alderley Park</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Inventory__c.Actual_Suite</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Serviced</value>
        </filters>
        <filters>
            <field>Remove_from_Availability__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Alderley Serviced Suites (Actual)</label>
    </listViews>
    <listViews>
        <fullName>Alderley_Serviced_Suites_Proposed</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Product__c</columns>
        <columns>Remove_from_Availability__c</columns>
        <columns>Sales_Status__c</columns>
        <columns>Customer__c</columns>
        <columns>Rent_per_workstation__c</columns>
        <columns>Workstations__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Alderley Park</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Inventory__c.Proposed_Suite</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Serviced</value>
        </filters>
        <label>Alderley Serviced Suites (Proposed)</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Product__c</columns>
        <columns>Suite_Status__c</columns>
        <columns>Sales_Status__c</columns>
        <columns>Space_Type__c</columns>
        <columns>Customer__c</columns>
        <columns>Size_sq_ft__c</columns>
        <columns>Workstations__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Birmingham_Car_Parking</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Product__c</columns>
        <columns>Space_Type__c</columns>
        <columns>Sales_Status__c</columns>
        <columns>Customer__c</columns>
        <columns>Cost_per_space__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Birmingham</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Inventory__c.Car_Parking</value>
        </filters>
        <filters>
            <field>Remove_from_Availability__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Birmingham Car Parking</label>
    </listViews>
    <listViews>
        <fullName>Birmingham_Co_working_Hot_Desks</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Product__c</columns>
        <columns>Sales_Status__c</columns>
        <columns>Customer__c</columns>
        <columns>Rent_per_workstation__c</columns>
        <columns>Workstations__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Birmingham</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Inventory__c.Desk</value>
        </filters>
        <filters>
            <field>Remove_from_Availability__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Birmingham Co-working Hot Desks</label>
    </listViews>
    <listViews>
        <fullName>Birmingham_Office_Suites_Actual</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Product__c</columns>
        <columns>Sales_Status__c</columns>
        <columns>Customer__c</columns>
        <columns>Rent_per_sq_ft__c</columns>
        <columns>Service_Charge_per_sq_ft__c</columns>
        <columns>Insurance_Charge_per_sq_ft__c</columns>
        <columns>Estate_Charge_per_sq_ft__c</columns>
        <columns>Ground_Rent_Charge_per__c</columns>
        <columns>Size_sq_ft__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Birmingham</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Inventory__c.Actual_Suite</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Office,Storage,Retail</value>
        </filters>
        <filters>
            <field>Remove_from_Availability__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Birmingham Office Suites (Actual)</label>
    </listViews>
    <listViews>
        <fullName>Birmingham_Office_Suites_Proposed</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Product__c</columns>
        <columns>Sales_Status__c</columns>
        <columns>Customer__c</columns>
        <columns>Rent_per_sq_ft__c</columns>
        <columns>Service_Charge_per_sq_ft__c</columns>
        <columns>Insurance_Charge_per_sq_ft__c</columns>
        <columns>Estate_Charge_per_sq_ft__c</columns>
        <columns>Ground_Rent_Charge_per__c</columns>
        <columns>Size_sq_ft__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Birmingham</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Inventory__c.Actual_Suite</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Office,Storage,Retail</value>
        </filters>
        <filters>
            <field>Remove_from_Availability__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Birmingham Office Suites (Proposed)</label>
    </listViews>
    <listViews>
        <fullName>Birmingham_Serviced_Suites_Actual</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Product__c</columns>
        <columns>Sales_Status__c</columns>
        <columns>Customer__c</columns>
        <columns>Rent_per_workstation__c</columns>
        <columns>Workstations__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Birmingham</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Inventory__c.Actual_Suite</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Serviced</value>
        </filters>
        <filters>
            <field>Remove_from_Availability__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Birmingham Serviced Suites (Actual)</label>
    </listViews>
    <listViews>
        <fullName>Birmingham_Serviced_Suites_Proposed</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Product__c</columns>
        <columns>Remove_from_Availability__c</columns>
        <columns>Sales_Status__c</columns>
        <columns>Customer__c</columns>
        <columns>Rent_per_workstation__c</columns>
        <columns>Workstations__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Birmingham</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Inventory__c.Proposed_Suite</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Serviced</value>
        </filters>
        <label>Birmingham Serviced Suites (Proposed)</label>
    </listViews>
</CustomObject>